# Primes

./: CMakeLists.txt  TestingGitLFS.docx
inc/: PrimeFactorizer.h  PrimeLister.h
src/: PrimeFactorizer.cpp  PrimeLister.cpp
tests/: testFactorIntoPrimes.cpp  testListPrimesUpToANumber.cpp
